eks-istio/workload/cert-man.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-issuer
